@@ -1,16 +1,15 @@
 package io.github.architers.center.dict.service.impl;
 
-import com.github.pagehelper.PageHelper;
 import io.github.architers.center.dict.PageUtils;
 import io.github.architers.center.dict.TenantUtils;
 import io.github.architers.center.dict.domain.dto.ImportJsonDictData;
 import io.github.architers.center.dict.domain.dto.ImportJsonDict;
 import io.github.architers.center.dict.domain.entity.Dict;
 import io.github.architers.center.dict.domain.entity.DictData;
-import io.github.architers.center.dict.mapper.DictDataMapper;
-import io.github.architers.center.dict.mapper.DictMapper;
+import io.github.architers.center.dict.dao.DictDataDao;
+import io.github.architers.center.dict.dao.DictDao;
 import io.github.architers.center.dict.service.DictService;
-import io.github.architers.context.query.PageParam;
+import io.github.architers.context.exception.NoLogStackException;
 import io.github.architers.context.query.PageRequest;
 import io.github.architers.context.query.PageResult;
 import io.github.architers.context.utils.JsonUtils;
@@ -25,9 +24,8 @@ import java.io.BufferedOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.function.Function;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 /**
@@ -41,10 +39,10 @@ public class DictServiceImpl implements DictService {
 
 
     @Resource
-    private DictMapper dictMapper;
+    private DictDao dictDao;
 
     @Resource
-    private DictDataMapper dictDataMapper;
+    private DictDataDao dictDataDao;
 
     @Override
     public void importJsonDictData(Integer tenantId, List<ImportJsonDict> importJsonDictList) {
@@ -65,44 +63,47 @@ public class DictServiceImpl implements DictService {
         }
         //删除之前的
         Set<String> dictCodes = dictList.stream().map(Dict::getDictCode).collect(Collectors.toSet());
-        dictMapper.deleteByDictCode(tenantId, dictCodes);
+        dictDao.deleteByDictCode(tenantId, dictCodes);
         //查询已有的
-        dictMapper.insertBatchSomeColumn(dictList);
-        dictDataMapper.insertBatchSomeColumn(dictDataList);
+        dictDao.insertBatchSomeColumn(dictList);
+        dictDataDao.insertBatchSomeColumn(dictDataList);
     }
 
     @Override
     public void exportJsonDictData(Integer tenantId, Set<String> dictCodes) {
         //查询数据字典
-        List<Dict> dictList = dictMapper.findByDictCodes(tenantId, dictCodes);
+        List<Dict> dictList = dictDao.findByDictCodes(tenantId, dictCodes);
         if (CollectionUtils.isEmpty(dictList)) {
-            throw new RuntimeException("没有数据需要导出");
+            throw new NoLogStackException("没有数据字典需要导出");
         }
         //查询数据字典值
-        List<DictData> dictDataList = dictDataMapper.findByDictCodes(tenantId, dictCodes);
-        Map<String, List<DictData>> dictDataMap = dictDataList.stream().collect(Collectors.groupingBy(DictData::getDataCode));
+        List<DictData> dictDataList = dictDataDao.findByDictCodes(tenantId, dictCodes);
+        Map<String, List<DictData>> dictDataMap =
+                dictDataList.stream().collect(Collectors.groupingBy(DictData::getDictCode));
         //转换为ImportJsonDict
         List<ImportJsonDict> importJsonDictList = new ArrayList<>(dictList.size());
         for (Dict dict : dictList) {
             ImportJsonDict importJsonDict = ImportJsonDict.convert2ImportJsonDict(dict);
             List<DictData> dictDatas = dictDataMap.get(dict.getDictCode());
+            importJsonDictList.add(importJsonDict);
+
+            if (dictDatas == null) {
+                continue;
+            }
             List<ImportJsonDictData> importJsonDictDataList = new ArrayList<>(dictDatas.size());
             for (DictData dictData : dictDatas) {
                 ImportJsonDictData importJsonDictData = ImportJsonDictData.convert2ImportDictData(dictData);
                 importJsonDictDataList.add(importJsonDictData);
             }
-            importJsonDictList.add(importJsonDict);
             importJsonDict.setDictDataList(importJsonDictDataList);
         }
         //转为json对象
         HttpServletResponse response = ServletUtils.response();
         try (OutputStream toClient = new BufferedOutputStream(response.getOutputStream())) {
             String fileName = UUID.randomUUID() + ".txt";
-
             response.reset();
             response.setContentType("application/x-download");
-            response.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(fileName, "UTF-8"));
-
+            response.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(fileName, StandardCharsets.UTF_8));
             response.setContentType("application/octet-stream");
             toClient.write(JsonUtils.writeValueAsBytes(importJsonDictList));
             toClient.flush();
@@ -114,7 +115,7 @@ public class DictServiceImpl implements DictService {
 
     @Override
     public PageResult<Dict> getDictByPage(PageRequest<Dict> pageRequest) {
-        return PageUtils.pageQuery(pageRequest.getPageParam(), () -> dictMapper.selectList(null));
+        return PageUtils.pageQuery(pageRequest.getPageParam(), () -> dictDao.selectList(null));
     }
 
 
